--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,38 @@
 @import 'libs/bootstrap-reboot.min';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
+@import 'base/variables';
+@import 'base/mixins'; 
+
+@import 'blocks/promo';
+@import 'blocks/title';
+@import 'blocks/buttons';
+@import 'blocks/sidepanel';
+@import 'blocks/menu';
+@import 'blocks/about';
+@import 'blocks/resume';
+@import 'blocks/skills';
+@import 'blocks/portfolio';
+@import 'blocks/price';
+@import 'blocks/contacts';
+@import 'blocks/policy';
+@import 'blocks/media';
+
+
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
+
+.divider{
+    width: 60px;
+    height: 3px;
+    background-color:$main-color;
+    margin-top: 25px;
 }
