--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,9 +1,23 @@
- @media(max-width: 1200px) {
+@media(max-width: 1439px) {
+    .sidepanel {
+        display: none;
+    }
+ }
+
+@media(max-width: 1200px) {
     .container {
         max-width: 960px;
     }
     .sidepanel {
         display: none;
+    }
+    .about {
+        grid-template-columns: 400px 510px;
+        column-gap: 40px;
+        &__skills{
+            column-gap: 0px;
+            grid-template: repeat(2,minmax(115px,auto))/repeat(2,250px);
+        }
     }
  }
 
@@ -11,12 +25,36 @@
     .container{
         max-width: 720px;
     }
+    .about {
+        grid-template-columns: 300px 380px;
+        
+        &__skills {
+            grid-template-columns: 360px;
+            grid-auto-rows: minmax(115px,auto);
+            &-item {
+                grid-template-columns: 40px 320px;
+                column-gap: 15px;
+            }
+        }
+        &__subtitle {
+            font-size: 31px;
+        }
+        &__photo {
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+
+            }
+        }
+    }
 }
 
 @media(max-width: 768px) {
     .container{
         max-width: 500px;
     }
+
 
     .title{
         &_fz48{
@@ -28,6 +66,21 @@
         &__title{
             width: 300px;
             line-height: 39px;
+        }
+    }
+    .about {
+        margin-top: 40px;
+        grid-template: 400px auto auto / 100%;
+        row-gap: 20px;
+        &__skills {
+            grid-template-columns: repeat(2, 245px);
+            &-item {
+                grid-template-columns: 40px 200px;
+                column-gap: 10px;
+            }
+        }
+        &__photo {
+            grid-row: unset;
         }
     }
 }
