--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -14,9 +14,28 @@
     .about {
         grid-template-columns: 400px 510px;
         column-gap: 40px;
+        justify-content: center;
         &__skills{
             column-gap: 0px;
             grid-template: repeat(2,minmax(115px,auto))/repeat(2,250px);
+        }
+    }
+    .resume {
+        &__wrapper {
+            grid-template-columns: repeat(2, 415px);
+            column-gap: 80px;
+            justify-content: center;
+        }
+    }
+    .skills {
+        &__wrapper {
+            grid-template-columns: repeat(3,270px);
+            justify-content: center;
+        }
+        &__blocks {
+            grid-template-columns: repeat(2,370px);
+            column-gap: 70px;
+            justify-content: center;
         }
     }
  }
@@ -46,6 +65,27 @@
                 object-fit: cover;
 
             }
+        }
+    }
+    .resume {
+        &__wrapper {
+            grid-template-columns: repeat(2,355px);
+            column-gap: 20px;
+            justify-content: center;
+        }
+        &__subtitle {
+            font-size: 31px;
+        }
+    }
+    .skills {
+        &__wrapper {
+            grid-template-columns: repeat(2,270px);
+            justify-content: center;
+        }
+        &__blocks {
+            grid-template-columns: repeat(2,350px);
+            column-gap: 20px;
+            justify-content: center;
         }
     }
 }
@@ -81,6 +121,26 @@
         }
         &__photo {
             grid-row: unset;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+
+            }
+        }
+    }
+    .resume {
+        &__wrapper {
+            grid-template-columns: repeat(1,402px);
+            grid-template-rows: auto;
+            row-gap: 30px;
+            column-gap: 20px;
+            justify-content: center;
+        }
+    }
+    .skills {
+        &__blocks {
+            grid-template-columns: repeat(1,350px);
         }
     }
 }
@@ -90,6 +150,7 @@
         width: 100%;
         padding: 0 10px;
     }
+
     .title {
         &_fz48{
             font-size: 25px;
@@ -112,6 +173,53 @@
         }
         &__link {
             font-size: 20px;
+        }
+    }
+
+    .aboutabout {
+        .container {
+            width: 100%;
+        }
+    }
+    .about {
+        grid-template: 340px auto auto / 1fr;
+        &__skills{
+            grid-template-columns: 1fr;
+            &-item {
+                grid-template-columns: 40px 0.8fr;
+                column-gap: 20px;
+            }
+        }
+        &__subtitle {
+            font-size: 24px;
+        }
+    }
+    .resume {
+        padding-top: 40px;
+        &__wrapper {
+            grid-template-columns: repeat(1,267px);
+            padding-top: 40px;
+        }
+        &__subtitle {
+            font-size: 24px;
+        }
+    }
+    .skills {
+        margin-top: 50px;
+        &__wrapper {
+            grid-template-columns: repeat(1,270px);
+            justify-content: center;
+            margin-top: 40px;
+        }
+        &__blocks{
+            margin-top: 45px;
+            grid-template-columns: repeat(1,270px);
+            &-block {
+                width: 270px;
+            }
+        }
+        &__subtitle {
+            font-size: 22px;
         }
     }
 }
