--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,10 @@
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+
+
 @import 'libs/bootstrap-reboot.min';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
@@ -23,11 +30,6 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-}
-
-.container {
-    width: 1140px;
-    margin: 0 auto;
 }
 
 .divider{
