--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -38,6 +38,22 @@
             justify-content: center;
         }
     }
+    .portfolio {
+         &__wrapper {
+            grid-template-columns: repeat(auto-fit, 280px);
+            grid-auto-rows: 280px;
+            justify-content: center;
+            .horizontal, .vertical {
+                grid-row: unset;
+                grid-column: unset;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+         }
+    }
  }
 
  @media(max-width: 992px) {
@@ -220,6 +236,14 @@
         }
         &__subtitle {
             font-size: 22px;
+        }
+    }
+    .portfolio {
+        &__wrapper {
+            margin-top: 45px;
+        }
+        &__subtitle {
+            font-size: 24px;
         }
     }
 }
