--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -54,6 +54,17 @@
             }
          }
     }
+    .contacts {
+        &__wrapper {
+            grid-template-columns: 585px;
+            justify-content: center;
+        }
+        &__photo {
+            img {
+                display: none;
+            }
+        }
+    }
  }
 
  @media(max-width: 992px) {
@@ -159,6 +170,34 @@
             grid-template-columns: repeat(1,350px);
         }
     }
+    .contacts {
+        padding-top: 30px;
+        &__descr{
+            margin: 0 auto;
+        }
+        &__form {
+            display: block;
+            width: 380px;
+            margin: 30px auto;
+        }
+        &__input {
+            margin-bottom: 20px;
+            height: 45px;
+        }
+        &__textarea {
+            height: 125px;
+            margin-bottom: 25px;
+        }
+        &__triggers {
+
+        }
+        &__policy {
+            input {
+                margin-right: 7px;
+                margin-left: 10px;
+            }
+        }
+    }
 }
 
 @media(max-width: 576px) {
@@ -244,6 +283,42 @@
         }
         &__subtitle {
             font-size: 24px;
+        }
+    }
+    .contacts {
+        padding-top: 30px;
+        &__subtitle {
+            font-size: 24px;
+        }
+        &__descr{
+            width: 300px;
+            margin: 0 auto;
+        }
+        &__form {
+            display: block;
+            width: 270px;
+            margin: 0;
+            margin-top: 30px;
+        }
+        &__input {
+            margin-bottom: 20px;
+            height: 45px;
+        }
+        &__textarea {
+            height: 125px;
+            margin-bottom: 25px;
+        }
+        &__button {
+            width: 130px;
+            height: 60px;
+            font-size: 12px;
+        }
+        &__policy {
+            font-size: 10px;
+            input {
+                margin-right: 7px;
+                margin-left: 10px;
+            }
         }
     }
 }
